--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,69 @@
 <!DOCTYPE html>
-<html lang="">
-  <head>
+<html lang="zh_CN">
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+    <link rel="icon" href="./favicon.ico">
+    <title>Get Started</title>
+</head>
+<body>
+
+<div id="app">
+    <h2>{{ title }}</h2>
+    <input v-model="title" type="text" @keydown.enter="addTodo">
+
+    <ul>
+        <li v-for="todo in todos">
+            <input type="checkbox" v-model="todo.done">
+            <span :class="{done:todo.done}">{{ todo.title }}</span>
+        </li>
+    </ul>
+
+
+    <div>
+        {{todos.filter(v=>!v.done).length}}
+        /
+        {{todos.length}}
+    </div>
+
+</div>
+
+<script src="https://unpkg.com/vue@next"></script>
+<script>
+    const App = {
+        data() {
+            return {
+                title: "", // 定义一个数据
+                todos: [{
+                    title: "food",
+                    done: false
+                }, {
+                    title: "study",
+                    done: true
+                }]
+            }
+        },
+        methods: {
+            addTodo() {
+                this.todos.push({
+                    title: this.title,
+                    done: false
+                })
+                this.title = ""
+            }
+        }
+    }
+    // 启动应用
+    Vue.createApp(App).mount('#app')
+</script>
+
+<style>
+.done {
+    color: gray;
+    text-decoration: line-through;
+}
+</style>
+
+</body>
 </html>
