--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
     <h2>{{ title }}</h2>
     <input v-model="title" type="text" @keydown.enter="addTodo">
 
+    <button v-if="active<all" @click="clear">清理</button>
+
     <ul>
         <li v-for="todo in todos">
             <input type="checkbox" v-model="todo.done">
@@ -53,6 +55,18 @@
                     done: false
                 })
                 this.title = ""
+            },
+
+            /*
+            *
+            * 过滤 filter()
+            *
+            * 过滤掉已完成 v.done === true
+            * 即只留下 v.done !== true 的元素
+            *
+            * */
+            clear() {
+                this.todos = this.todos.filter(v=>!v.done)
             }
         },
         /**
