comment: v-if & v-else

--- a/public/index.html
+++ b/public/index.html
@@ -16,19 +16,21 @@
 
     <button v-if="active<all" @click="clear">清理</button>
 
-    <ul>
+    <ul v-if="todos.length">
         <li v-for="todo in todos">
             <input type="checkbox" v-model="todo.done">
             <span :class="{done:todo.done}">{{ todo.title }}</span>
         </li>
     </ul>
 
+    <div v-else>暂无数据</div>
+
 
     <div>
         全选<input type="checkbox" v-model="allDone">
         {{ active }}
         /
-        {{all}}
+        {{ all }}
     </div>
 
 </div>
@@ -66,7 +68,7 @@
             *
             * */
             clear() {
-                this.todos = this.todos.filter(v=>!v.done)
+                this.todos = this.todos.filter(v => !v.done)
             }
         },
         /**
