comment: 删除了 vue2 用法的代码

--- a/public/index.html
+++ b/public/index.html
@@ -5,124 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="./favicon.ico">
-    <script src="https://unpkg.com/vue@next"></script>
     <title>Get Started</title>
 </head>
 <body>
-
-<div id="app">
-    <h2>{{ title }}</h2>
-    <input v-model="title" type="text" @keydown.enter="addTodo">
-
-    <button v-if="active<all" @click="clear">清理</button>
-
-    <ul v-if="todos.length">
-        <li v-for="todo in todos">
-            <input type="checkbox" v-model="todo.done">
-            <span :class="{done:todo.done}">{{ todo.title }}</span>
-        </li>
-    </ul>
-
-    <div v-else>暂无数据</div>
-
-
-    <div>
-        全选<input type="checkbox" v-model="allDone">
-        {{ active }}
-        /
-        {{ all }}
-    </div>
-
-</div>
-
-
-<script>
-    const App = {
-        data() {
-            return {
-                title: "", // 定义一个数据
-                todos: [{
-                    title: "food",
-                    done: false
-                }, {
-                    title: "study",
-                    done: true
-                }]
-            }
-        },
-        methods: {
-            addTodo() {
-                this.todos.push({
-                    title: this.title,
-                    done: false
-                })
-                this.title = ""
-            },
-
-            /*
-            *
-            * 过滤 filter()
-            *
-            * 过滤掉已完成 v.done === true
-            * 即只留下 v.done !== true 的元素
-            *
-            * */
-            clear() {
-                this.todos = this.todos.filter(v => !v.done)
-            }
-        },
-        /**
-         * 计算属性
-         *
-         * computed 属性的配置，也即 active 和 all，都是函数。
-         * 这两个函数返回的计算后的值，在模板里可以直接当做数据来用
-         *
-         * 计算属性还内置了缓存功能，如果依赖数据没变化，多次使用计算属性会直接返回缓存结果，
-         * 同我们直接写在模板里相比，性能也有了提升。
-         */
-        computed: {
-            active() {
-                return this.todos.filter(v => !v.done).length
-            },
-            all() {
-                return this.todos.length
-            },
-
-            /**
-             * 全选功能
-             *
-             * 全选框在勾选与取消勾选两个状态之间的切换，会把所有清单内的数据都同步勾选。
-             * 清单内的项目如果全部选中或者取消，也会修改全选框的状态。
-             *
-             * 计算属性存在「修改」属性，所以需要使用 对象 而不是函数
-             * 要变成一个对象，分别实现 get 和 set 函数
-             * get 就是之前的返回值，set 就是修改计算属性要执行的函数。
-             *
-             */
-            allDone: {
-                get: function () {
-                    return this.active === 0
-                },
-                set: function (val) {
-                    this.todos.forEach(todo => {
-                        todo.done = val
-                    })
-                }
-            }
-        }
-    }
-
-
-    // 启动应用
-    Vue.createApp(App).mount('#app')
-</script>
-
-<style>
-    .done {
-        color: gray;
-        text-decoration: line-through;
-    }
-</style>
-
+    <div id="app"></div>
 </body>
 </html>
